--- a/css/stylescatalogo.css
+++ b/css/stylescatalogo.css
@@ -3,11 +3,16 @@
 }
 
 img{
+    border-radius: 10%;
     width: 200px;
     justify-content: start;
     vertical-align: middle;
+    display:flex;
 }
 
-p{
-    
+div{
+    display:flex;
+    padding: 10px;
+    border: 2px solid black;
+    background-color: rgb;
 }
