--- a/css/stylescatalogo.css
+++ b/css/stylescatalogo.css
@@ -16,3 +16,14 @@ div{
     border: 2px solid black;
     background-color: rgb;
 }
+
+nav{
+    padding: 10px;
+    text-align: center;
+    background-color: lightcoral;
+    justify-items: center;
+}
+
+a:hover{
+    text-shadow: 40%;
+}
