--- a/css/stylescatalogo.css
+++ b/css/stylescatalogo.css
@@ -11,10 +11,10 @@ img{
 }
 
 div{
+    background-color: rgb(198, 233, 240);
     display:flex;
     padding: 10px;
-    border: 2px solid black;
-    background-color: rgb;
+    border: 2px solid rgb(115, 203, 221);
 }
 
 nav{
@@ -22,6 +22,12 @@ nav{
     text-align: center;
     background-color: lightcoral;
     justify-items: center;
+    border: 3px inset rgb(148, 107, 226);
+}
+
+p{
+    padding: 2%;
+    align-items: center;
 }
 
 a:hover{
