--- a/css/contactoStyle.css
+++ b/css/contactoStyle.css
@@ -1,9 +1,42 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-header {
-    width: 100%;
+header{
+    text-align: center;
+    background-color: rgb(198, 233, 240);
+    display:flex;
+    padding: 10px;
+    border: 2px solid rgb(115, 203, 221);
+}
+
+nav {
+    padding-left: 10px;
+    text-align: center;
+    background-color: lightcoral;
+    justify-items: center;
+    border: 3px inset rgb(148, 107, 226);
+}
+nav a{
+    padding-left: 10px;
+}
+
+p{
+    padding: 2%;
+    text-align: justify;
+}
+
+a:hover{
+    text-shadow: 40%;
+}
+
+main form{
+    text-align: center;
+    padding-bottom: 10px;
+}
+main form div {
+    padding-bottom: 10px;
+}
+section:nth-child(2) iframe{
     text-align: center;
 }
