--- a/css/stylescatalogo.css
+++ b/css/stylescatalogo.css
@@ -2,6 +2,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+header{
+    background-color:lightgreen;
+}
+
 img{
     border-radius: 10%;
     width: 200px;
