--- a/css/contactoStyle.css
+++ b/css/contactoStyle.css
@@ -2,9 +2,13 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body{
+    background-color: rgb(198, 233, 240);
+}
+
 header{
     text-align: center;
-    background-color: rgb(198, 233, 240);
+    background-color: lightgreen;
     display:flex;
     padding: 10px;
     border: 2px solid rgb(115, 203, 221);
