--- a/css/stylescatalogo.css
+++ b/css/stylescatalogo.css
@@ -2,6 +2,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a{
+    text-decoration: none;
+    color:black
+}
+
 header{
     background-color:lightgreen;
 }
