--- a/css/contactoStyle.css
+++ b/css/contactoStyle.css
@@ -6,6 +6,11 @@ body{
     background-color: rgb(198, 233, 240);
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 header{
     text-align: center;
     background-color: lightgreen;
@@ -41,6 +46,6 @@ main form{
 main form div {
     padding-bottom: 10px;
 }
-section:nth-child(2) iframe{
-    text-align: center;
+main section:last-child p{
+    text-align: center;   
 }
