--- a/css/contactoStyle.css
+++ b/css/contactoStyle.css
@@ -11,12 +11,15 @@ a {
     color: black;
 }
 
-header{
+header { 
     text-align: center;
     background-color: lightgreen;
     display:flex;
     padding: 10px;
     border: 2px solid rgb(115, 203, 221);
+}
+h1 {
+    text-align: center;
 }
 
 nav {
@@ -48,4 +51,9 @@ main form div {
 }
 main section:last-child p{
     text-align: center;   
+}
+
+footer p {
+    padding-top: 100px;
+    text-align: center;
 }
