--- a/css/decor.css
+++ b/css/decor.css
@@ -2,7 +2,7 @@ body{
     background-color: lightgreen;
 }
 main article :first-child{
-    background-color: black;
+    background-color: rgb(198, 233, 240);
 }
 aside{
     background-color: blue;
