--- a/css/stylescatalogo.css
+++ b/css/stylescatalogo.css
@@ -1,7 +1,9 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
 }
-
+body{
+    background-color: lightgreen;
+}
 a{
     text-decoration: none;
     color:black
