--- a/css/stylescatalogo.css
+++ b/css/stylescatalogo.css
@@ -48,3 +48,22 @@ p{
 a:hover{
     text-shadow: 40%;
 }
+.pic:hover {
+    cursor: pointer;
+  }
+  /*GROW*/
+  .grow img {
+    height: 400px;
+    width: 400px;
+  
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+  }
+  
+  .grow img:hover {
+    width: 500px;
+    height: 500px;
+  }
